force-app/main/default/objects/Researcher_Classification_Code__c/fields/I_RS_Active__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Active__c</fullName>
    <formula>I_RS_Classification_Master__r.I_RS_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>