force-app/main/default/objects/Researcher_Classification_Code__c/fields/I_RS_Date_Added__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Added__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>