force-app/main/default/objects/Researcher_Classification_Code__c/fields/I_RS_Disable_Grid_Validation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Disable_Grid_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In some cases, we want to turn off the typical validation for Classification Codes. We can do that on a record-by-record basis via this tickbox</description>
    <label>Disable Grid Validation</label>
    <type>Checkbox</type>
</CustomField>