force-app/main/default/objects/Researcher_Classification_Code__c/fields/I_RS_Percentage_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Percentage_Number__c</fullName>
    <formula>VALUE(TEXT(I_RS_Percentage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>