force-app/main/default/objects/Researcher_Classification_Code__c/fields/I_RS_Primary__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>