force-app/main/default/objects/Researcher_Classification_Code__c/fields/I_RS_Researcher__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Researcher__c</fullName>
    <description>The individual this Classification Code is related to</description>
    <label>Researcher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classification Codes</relationshipLabel>
    <relationshipName>Researcher_Classification_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>