force-app/main/default/objects/Researcher_Classification_Code__c/validationRules/Date_Removed_greater_to_Date_Added.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Removed_greater_to_Date_Added</fullName>
    <active>true</active>
    <description>Date Removed can&apos;t be less than Date Added</description>
    <errorConditionFormula>I_RS_Date_Removed__c &lt;  I_RS_Date_Added__c</errorConditionFormula>
    <errorDisplayField>I_RS_Date_Removed__c</errorDisplayField>
    <errorMessage>Date Removed can&apos;t be less than Date Added</errorMessage>
</ValidationRule>