force-app/main/default/objects/Researcher_Classification_Code__c/validationRules/Percentage_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>!I_RS_Disable_Grid_Validation__c &amp;&amp; I_RS_Percentage__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>I_RS_Percentage__c</errorDisplayField>
    <errorMessage>Percentage must be greater than 0%</errorMessage>
</ValidationRule>